# info150

./: ARCHIVES.md  Branch · Branch · Branch · Обзор проекта svend4_meta2.json  Branch · Branch · Branch · Обзор проекта svend4_meta2.md  Branch · Branch · Branch · Обзор проекта svend4_meta2.txt  DEMOS.md  DOMAIN_ADAPTATIONS.md  INSTALL.md  README.md  V13_REUSE_MAP.md
biocore/: Makefile  README.md  pyproject.toml
biocore/biocore/: __init__.py  coords.py  fusion.py  seeds.py  sms.py  text_guards.py
biocore/tests/: test_coords.py  test_fusion.py  test_seeds.py  test_sms.py  test_text_guards.py
portal/: Makefile  README.md  pyproject.toml
portal/portal/: __init__.py  cli.py  coords.py  discovery.py  protocol.py  registry.py
portal/tests/: test_coords.py  test_discovery.py  test_protocol.py  test_registry.py
triage4/: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
triage4-aqua/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-aqua/docs/: PHILOSOPHY.md
triage4-aqua/examples/: webcam_demo.py
triage4-aqua/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_monitoring_engine.py  test_signatures.py
triage4-aqua/triage4_aqua/: __init__.py
triage4-aqua/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-bird/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-bird/docs/: PHILOSOPHY.md
triage4-bird/examples/: webcam_demo.py
triage4-bird/tests/: test_dashboard_api.py  test_frame_source.py  test_health_engine.py  test_models.py  test_signatures.py
triage4-bird/triage4_bird/: __init__.py  portal_adapter.py
triage4-bird/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-clinic/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-clinic/docs/: PHILOSOPHY.md
triage4-clinic/examples/: webcam_demo.py
triage4-clinic/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_signatures.py  test_triage_engine.py
triage4-clinic/triage4_clinic/: __init__.py
triage4-clinic/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-crowd/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-crowd/docs/: PHILOSOPHY.md
triage4-crowd/examples/: webcam_demo.py
triage4-crowd/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_monitoring_engine.py  test_signatures.py
triage4-crowd/triage4_crowd/: __init__.py
triage4-crowd/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-drive/: .gitignore  Makefile  README.md  STATUS.md  pyproject.toml
triage4-drive/docs/: PHILOSOPHY.md
triage4-drive/examples/: webcam_demo.py
triage4-drive/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_monitoring_engine.py  test_signatures.py
triage4-drive/triage4_drive/: __init__.py
triage4-drive/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-farm/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-farm/docs/: PHILOSOPHY.md
triage4-farm/examples/: webcam_demo.py
triage4-farm/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_signatures.py  test_welfare_engine.py
triage4-farm/triage4_farm/: __init__.py
triage4-farm/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-fish/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-fish/docs/: PHILOSOPHY.md
triage4-fish/examples/: webcam_demo.py
triage4-fish/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_pen_engine.py  test_signatures.py
triage4-fish/triage4_fish/: __init__.py  portal_adapter.py
triage4-fish/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-fit/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-fit/docs/: PHILOSOPHY.md
triage4-fit/examples/: webcam_demo.py
triage4-fit/tests/: test_dashboard_api.py  test_form_engine.py  test_frame_source.py  test_models.py  test_pose_symmetry.py
triage4-fit/triage4_fit/: __init__.py
triage4-fit/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-home/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-home/docs/: PHILOSOPHY.md
triage4-home/examples/: webcam_demo.py
triage4-home/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_monitoring_engine.py  test_signatures.py
triage4-home/triage4_home/: __init__.py
triage4-home/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-pet/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-pet/docs/: PHILOSOPHY.md
triage4-pet/examples/: webcam_demo.py
triage4-pet/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_signatures.py  test_triage_engine.py
triage4-pet/triage4_pet/: __init__.py
triage4-pet/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-rescue/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-rescue/docs/: PHILOSOPHY.md
triage4-rescue/examples/: webcam_demo.py
triage4-rescue/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_multiuser.py  test_protocols.py  test_signatures.py
triage4-rescue/triage4_rescue/: __init__.py
triage4-rescue/web_ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
triage4-site/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-site/docs/: PHILOSOPHY.md
triage4-site/examples/: webcam_demo.py
triage4-site/tests/: test_dashboard_api.py  test_frame_source.py  test_models.py  test_monitoring_engine.py  test_signatures.py
triage4-site/triage4_site/: __init__.py
triage4-site/web_ui/: README.md  index.html  package.json  vite.config.ts
triage4-sport/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-sport/docs/: PHILOSOPHY.md
triage4-sport/examples/: webcam_demo.py
triage4-sport/tests/: test_dashboard_api.py  test_engine.py  test_frame_source.py  test_models.py  (+1 more)
triage4-stroll/: Makefile  README.md  STATUS.md  pyproject.toml
triage4-wild/: Makefile  README.md  STATUS.md  pyproject.toml
(+735 files in other folders)
