[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biocore"
version = "0.1.0"
description = "Shared utilities extracted from the fourteen triage4 siblings — deterministic seeds, claims-guard helpers, decimal-coordinate detection, SMS-length cap"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "svend4" }
]
# Zero dependencies. biocore is intentionally pure stdlib —
# any dependency it picks up becomes a transitive dependency
# of every sibling that uses it.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["biocore*"]
