[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage4-crowd"
version = "0.1.0"
description = "Crowd-safety monitoring library — density / flow / pressure / medical-in-crowd — sibling of triage4, venue-ops framing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "svend4" }
]
# Minimal dependencies. The library consumes already-tracked
# person counts + flow vectors + pressure readings; upstream
# person detection + tracking lives in the consumer app.
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
# Web UI surface — opt-in. Pulls in FastAPI + uvicorn for the
# dashboard at ``triage4_crowd.ui.dashboard_api``.
ui = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27"
]
# Camera input surface — opt-in. opencv-python for real frame capture
# (USB / RTSP / IP / video file). Without this extra the perception
# layer's Loopback + Synthetic sources still work.
camera = [
  "opencv-python>=4.8"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["triage4_crowd*"]
