[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage4-farm"
version = "0.1.0"
description = "Stand-off livestock welfare observation library — sibling of triage4, agricultural posture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "svend4" }
]
# Narrow dep surface on purpose. This is a welfare-observation
# library, not a backend. Produces farmer-facing alerts from
# camera + sensor observations; UI + storage are separate.
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
# Web UI surface — opt-in.
ui = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27"
]
# Camera input surface — opt-in. opencv-python for real frame capture
# (USB / RTSP / IP / video file). Without this extra the perception
# layer's Loopback + Synthetic sources still work.
camera = [
  "opencv-python>=4.8"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["triage4_farm*"]
