[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage4-fish"
version = "0.1.0"
description = "Aquaculture pen-welfare monitoring library — multi-modal vision + water-chemistry — sibling of triage4, farm-manager handoff with antibiotic-dosing-overreach boundary"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "svend4" }
]
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["triage4_fish*"]
