[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage4-fish"
version = "0.1.0"
description = "Aquaculture pen-welfare monitoring library — multi-modal vision + water-chemistry — sibling of triage4, farm-manager handoff with antibiotic-dosing-overreach boundary"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "svend4" }
]
dependencies = [
  "numpy>=1.26",
  "biocore>=0.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
# Web UI surface — opt-in. Pulls in FastAPI + uvicorn for the
# dashboard at ``triage4_fish.ui.dashboard_api``. httpx is the
# FastAPI test-client dep; tests under tests/test_dashboard_api.py
# use it to drive the in-process app.
ui = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27"
]
# Camera input surface — opt-in. opencv-python for real frame capture
# (USB / RTSP / IP / video file). Without this extra the perception
# layer's Loopback + Synthetic sources still work.
camera = [
  "opencv-python>=4.8"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["triage4_fish*"]
