[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage4-rescue"
version = "0.1.0"
description = "Civilian mass-casualty triage support library — START + JumpSTART — sibling of triage4, humanitarian framing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "svend4" }
]
# Intentionally minimal dependency surface. The core algorithm
# (START + JumpSTART) is deterministic rule evaluation — no ML
# at the MVP layer. Platform adapters (CRDT sync, drone bridges,
# responder tablets) live in consumer applications, not here.
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
# Web UI surface — opt-in. Pulls in FastAPI + uvicorn for the
# dashboard at ``triage4_rescue.ui.dashboard_api``. httpx is the
# FastAPI test-client dep; tests under tests/test_dashboard_api.py
# use it to drive the in-process app.
ui = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27"
]
# Camera input surface — opt-in. opencv-python for real frame capture
# (USB / RTSP / IP / video file). Without this extra the perception
# layer's Loopback + Synthetic sources still work.
camera = [
  "opencv-python>=4.8"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["triage4_rescue*"]
