[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage4-sport"
version = "0.1.0"
description = "Elite-athlete sports-performance monitoring library — three-audience output (coach + trainer + physician) — sibling of triage4"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "svend4" }
]
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
# Web UI surface — opt-in.
ui = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27"
]
# Camera input surface — opt-in. opencv-python for real frame capture
# (training-rig camera / RTSP). Without this extra the perception
# layer's Loopback + Synthetic sources still work.
camera = [
  "opencv-python>=4.8"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["triage4_sport*"]
