[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage4"
version = "0.1.0"
description = "Simulation-first autonomous stand-off triage stack"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "svend4" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.100"
]
mutation = [
  "mutmut>=2.4"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["triage4*"]

# ---------------------------------------------------------------------------
# Mutation testing (mutmut) — covers Phase 13-prep RISK_REGISTER CI-002 gate.
# Scope: the triage-critical modules where a silent-regression would be
# most dangerous. Broader coverage is possible but slow; start with the
# life-vs-death surface.
# ---------------------------------------------------------------------------
[tool.mutmut]
paths_to_mutate = "triage4/triage_reasoning/score_fusion.py,triage4/triage_reasoning/rapid_triage.py,triage4/triage_reasoning/larrey_baseline.py,triage4/triage_reasoning/celegans_net.py,triage4/mission_coordination/mission_triage.py,triage4/integrations/marker_codec.py,triage4/integrations/bridge_health.py"
runner = "python -m pytest -x -q"
tests_dir = "tests/"
